@@ -440,6 +440,7 @@ public class IndexSchema {
       } else {
         sb.append("null");
       }
+      sb.append("]est");
       if (nd==null) {
         sb.append("schema has no name!");
         log.warn(sb.toString());
